# python-distributed-llm

./: .gitignore  README.md  pyproject.toml
generate_safetensor/: GeraSafetensors.ipynb
phi-3/: main.py
phi-3 copy/: main.py
phi-3 copy/master/: main.py
phi-3 copy/worker1/: main.py
phi-3 copy/worker2/: main.py
phi-3-safetensors/master/: chat.py  main.py
phi-3-safetensors/worker1/: main.py
phi-3-safetensors/worker2/: main.py
phi-3/master/: main.py
phi-3/worker1/: main.py
phi-3/worker2/: main.py
src/gpt2/master/: main.py
src/gpt2/worker1/: main.py
src/gpt2/worker2/: main.py
src/phi3/: manager.py  partial_forward_client.py  partial_forward_server.py  worker_1.py  worker_2.py
src/phi3/master/: main.py
src/phi3/phi3_partial/: __init__.py
src/phi3/test/: test_one.py  test_two.py  test_with_master_two_servers.py  teste_master_with_two_servers_wo_cache.py  teste_version_3_5.py  teste_with_two_servers.py
src/phi3/worker1/: main.py
src/phi3/worker2/: main.py
src/phi3_partial/: main.py  main_a.py  server.py  server2.py  teste_client.py  teste_server.py
src/phi3_partial/phi3_partial/: phi3_partial_model.py
src/phi3_partial/phi3_partial/con/: abstract_client.py  abstract_server.py
src/phi3_partial/phi3_partial/raw_server/: communication_protocol.py  partial_forward_client.py  partial_forward_server.py
src/worker2/: main.py
