[tool.poetry]
name = "python-distributed-llm"
version = "0.1.0"
description = ""
authors = ["Elson Silva <elsonjuniog@gmail.com>"]
readme = "README.md"
package-mode = false

#packages = [
#  { include = "phi3_partial", from = "src/packages" }
#]

[tool.poetry.dependencies]
python = "^3.12"
transformers = "^4.51.3"
torch = {version = "^2.7.0+cpu", source = "pytorch-cpu"}
torchvision = {version = "^0.22.0+cpu", source = "pytorch-cpu"}
torchaudio = {version = "^2.7.0+cpu", source = "pytorch-cpu"}
fastapi = "^0.115.12"
uvicorn = "^0.34.2"


httpx = "^0.28.1"
safetensors = "^0.5.3"
ipykernel = "^6.29.5"
sqlalchemy = "^2.0.41"
compressed-tensors = "^0.10.2"
[tool.poetry.group.dev.dependencies]
blue = "^0.9.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[[tool.poetry.source]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
secondary = true

